# RigStory-Studio

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_phase_0_foundation.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/application/: jobs.py
backend/app/core/: config.py  database.py
backend/app/domain/: __init__.py  blueprint.py  canonical.py  character.py  character_builder.py  clip.py  common.py  errors.py  generation.py  ids.py  mesh_skinning.py  migrations.py  motion.py  motion_plan.py  motion_plan_validation.py  plan_compiler.py  project.py  rig.py  scene.py  scene_queries.py  scene_snapshot.py  versioning.py
backend/app/infrastructure/: __init__.py
backend/app/models/: __init__.py  settings.py
backend/app/schemas/: __init__.py  characters.py  exports.py  health.py  motion.py  motion_plans.py  ollama.py  projects.py  scenes.py  settings.py
backend/app/services/: health.py  media_export.py  project_archive.py  project_store.py
backend/scripts/: benchmark_mesh_skinning.py  benchmark_release.py  export_openapi.py  generate_fixtures.py
backend/tests/: conftest.py  sample_paths.py  test_character_generation.py  test_characters.py  test_health.py  test_media_export.py  test_motion.py  test_motion_plans.py  test_ollama_routes.py  test_openapi.py  test_project_archive.py  test_project_store_upgrade.py  test_projects.py  test_scenes.py
backend/tests/application/: test_jobs.py  (+2 more)
(+187 files in other folders)
