[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "rigstory-backend"
version = "0.1.0"
description = "RigStory Studio FastAPI backend"
license = { text = "GPL-3.0-only" }
requires-python = ">=3.12,<3.14"
dependencies = [
  "alembic>=1.16.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "Pillow>=12.0.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.7.0",
  "sqlmodel>=0.0.24",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "black>=25.1.0",
  "hypothesis>=6.130.0",
  "isort>=6.0.0",
  "mypy>=1.16.0",
  "pip-licenses>=5.0.0",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.0.0",
  "ruff>=0.12.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_any_generics = true
plugins = []
